--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -5,6 +5,14 @@ body {
   color: #aaaaaa;
 }
 
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
 h1,
 h2,
 h3,
